2 et 3 - L'installation et contenu Bootstrap

--- a/index.html
+++ b/index.html
@@ -5,21 +5,76 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Démonstration :)</title>
-    <link rel="stylesheet" href="./styles/main.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
+      href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
   </head>
   <body>
-    <h1 class="display-1">Lorem Ipsum :)</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aut dolorum
-      iure voluptate laudantium. Reiciendis eaque nostrum beatae cumque
-      consequatur labore ratione obcaecati mollitia, corrupti nulla dicta porro
-      esse quasi.
-    </p>
+    <p class="lead text-decoration-underline">Noémie Martin</p>
+    <p>test</p>
+
+    <img
+      class="rounded img-fluid mx-auto d-block "
+      src="./images/logo.png"
+      alt="Logo"
+    />
+
+    <!--
+    <div class="table-responsive-md">
+      <table class="table table-primary">
+        <thead>
+          <tr>
+            <th scope="col">Column 1</th>
+            <th scope="col">Column 2</th>
+            <th scope="col">Column 3</th>
+            <th scope="col">Column 4</th>
+            <th scope="col">Column 5</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="">
+            <td scope="row">R1C1</td>
+            <td>R1C2</td>
+            <td>R1C3</td>
+            <td>R1C3</td>
+            <td>R1C4</td>
+          </tr>
+          <tr class="">
+            <td scope="row">Item</td>
+            <td>Item</td>
+            <td>Item</td>
+            <td>Item</td>
+            <td>Item</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    -->
+
+    <table class="table table-success table-bordered">
+      <tr>
+        <th>Nom</th>
+        <th>Prénom</th>
+        <th>Âge</th>
+      </tr>
+      <tr>
+        <td>Trabelsi</td>
+        <td>Yosr</td>
+        <td>21</td>
+      </tr>
+      <tr>
+        <td class="table-active">Drazeta</td>
+        <td>Lucas</td>
+        <td>19</td>
+      </tr>
+      <tr>
+        <td>Qaddaha</td>
+        <td>Gabriel</td>
+        <td>23</td>
+      </tr>
+    </table>
+
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
