--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     />
   </head>
   <body>
-    <p class="lead text-decoration-underline">Noémie Martin</p>
-    <p>test</p>
+    <main class="container-fluid">
+      <p class="lead text-decoration-underline">Noémie Martin</p>
+      <p>test</p>
 
-    <img
-      class="rounded img-fluid mx-auto d-block "
-      src="./images/logo.png"
-      alt="Logo"
-    />
+      <img
+        class="rounded img-fluid mx-auto d-block "
+        src="./images/logo.png"
+        alt="Logo"
+      />
 
-    <!--
+      <!--
     <div class="table-responsive-md">
       <table class="table table-primary">
         <thead>
@@ -52,28 +53,29 @@
     </div>
     -->
 
-    <table class="table table-success table-bordered">
-      <tr>
-        <th>Nom</th>
-        <th>Prénom</th>
-        <th>Âge</th>
-      </tr>
-      <tr>
-        <td>Trabelsi</td>
-        <td>Yosr</td>
-        <td>21</td>
-      </tr>
-      <tr>
-        <td class="table-active">Drazeta</td>
-        <td>Lucas</td>
-        <td>19</td>
-      </tr>
-      <tr>
-        <td>Qaddaha</td>
-        <td>Gabriel</td>
-        <td>23</td>
-      </tr>
-    </table>
+      <table class="table table-success table-bordered">
+        <tr>
+          <th>Nom</th>
+          <th>Prénom</th>
+          <th>Âge</th>
+        </tr>
+        <tr>
+          <td>Trabelsi</td>
+          <td>Yosr</td>
+          <td>21</td>
+        </tr>
+        <tr>
+          <td class="table-active">Drazeta</td>
+          <td>Lucas</td>
+          <td>19</td>
+        </tr>
+        <tr>
+          <td>Qaddaha</td>
+          <td>Gabriel</td>
+          <td>23</td>
+        </tr>
+      </table>
+    </main>
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
